# sp_fitting_models

./: .gitignore  Cargo.toml  README.en.md  README.md  build_interactive_mixed.bat  interactive_mixed.spec  pyproject.toml
.github/workflows/: python-publish.yml
examples/: __init__.py  basic_usage.py  interactive_mixed.py
scripts/: build_interactive_mixed.ps1
src/: lib.rs
src/sp_fitting_models/: __init__.py  _core.pyd  _core.pyi  data.py  mixed_models.py  models.py  objective.py
src/sp_fitting_models/fitting/: __init__.py  objective.py
src/sp_fitting_models/models/: __init__.py  cooperative.py  isodesmic.py  mixed.py  utils.py
src/sp_fitting_models/models/models_old/: __init__.py  mixed.py  utils.py
test/: test_mixed_interactive.py  test_objective.py
tests/: __init__.py  test_cooperative.py  test_fitting.py  test_isodesmic.py  test_mixed.py  test_objective.py  test_rust_vs_python.py  test_utils.py
