[project]
name = "sp-fitting-models"
version = "1.0.0"
description = "For fitting spectroscopic data to cooperative and isodesmic models of supramolecular polymerization."
readme = "README.md"
authors = [
    { name = "IndigoCarmine", email = "tamanisikaminai@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
]

[project.scripts]
sp-fitting-models = "sp_fitting_models:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
